--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "gulp": "^3.9.1",
     "gulp-connect": "^5.0.0",
     "gulp-htmlincluder": "^0.1.0",
     "gulp-less": "^3.3.0"
